--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             >Web<span class="studio">Studio</span></a
           >
           <ul class="menu list">
-            <li class="menu-item"><a class="menu-link link" href="./index.html">Студія</a></li>
+            <li class="menu-item"><a class="menu-link current link" href="./index.html">Студія</a></li>
             <li class="menu-item">
               <a class="menu-link link" href="./portfolio.html">Портфоліо</a>
             </li>
@@ -287,52 +287,54 @@
         </div>
       </section>
       <section class="section">
+        <div class="container">
         <h2 class="second-title">Постійні клієнти</h2>
         <div>
           <ul class="customers-list list">
             <li class="customers-list-item">
               <a href="" class="customers-list-link">
-                <svg class="customers-list-icon">
+                <svg aria-label="група" class="customers-list-icon">
                   <use href="./images/icons.svg#icon-group"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a href="" class="customers-list-link">
-                <svg class="customers-list-icon">
+                <svg aria-label="група1" class="customers-list-icon">
                   <use href="./images/icons.svg#icon-group-1"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a href="" class="customers-list-link">
-                <svg class="customers-list-icon">
+                <svg aria-label="група2" class="customers-list-icon">
                   <use href="./images/icons.svg#icon-group-2"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a href="" class="customers-list-link">
-                <svg class="customers-list-icon">
+                <svg aria-label="група3" class="customers-list-icon">
                   <use href="./images/icons.svg#icon-group-3"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a href="" class="customers-list-link">
-                <svg class="customers-list-icon">
+                <svg aria-label="група4" class="customers-list-icon">
                   <use href="./images/icons.svg#icon-group-4"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a href="" class="customers-list-link">
-                <svg class="customers-list-icon">
+                <svg aria-label="група5" class="customers-list-icon">
                   <use href="./images/icons.svg#icon-group-5"></use>
                 </svg>
               </a>
             </li>
           </ul>
+        </div>
         </div>
       </section>
     </main>
@@ -368,7 +370,7 @@
         </div>
 
         <div class="join-footer-box">
-          <h3 class="join">приєднуйтесь</h3>
+          <p class="join">приєднуйтесь</p>
           <ul class="social-footer list">
             <li class="footer-list">
               <a href="" class="footer-list-link">
