--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
           <ul class="menu list">
             <li class="menu-item"><a class="menu-link link" href="./index.html">Студія</a></li>
             <li class="menu-item">
-              <a class="menu-link link" href="./portfolio.html">Портфоліо</a>
+              <a class="menu-link current link" href="./portfolio.html">Портфоліо</a>
             </li>
             <li class="menu-item"><a class="menu-link link" href="#">Контакти</a></li>
           </ul>
